...
                        _notToList = tempList;
                        _notToController.text = _notToList.join(', ');
                      }
                    });
                    Navigator.pop(ctx2);
                  },
                  child: const Text('OK'),
                ),
              ],
            );
          },
        );
      },
    );
  }

  /// בונה את המפת העדפות עם ברירות מחדל (false)
  void _initPreferencesKeys() {
    switch (widget.eventType) {
      case 'Classroom/Workshop':
        preferences = {
          'Board': false,
          'Air Conditioner': false,
          'Window': false,
          'Entrance': false,
        };
...
